
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int D_DIFF ;
 long D_START ;
 int atoi (int ) ;
 int banner (char*) ;
 int bruteforce (long,int) ;
 int exit (int) ;
 int fprintf (int ,char*,int) ;
 int getopt (int,char**,char*) ;
 int make_string (long) ;
 int optarg ;
 int optopt ;
 int stderr ;
 long strtoul (int ,int *,int ) ;
 int tease () ;

int
main(int argc,char *argv[])
{
      char * option_list = "bd:r:s:";
      int option,brute = 0,opterr = 0,diff = D_DIFF;
      long ret,start = D_START;

      banner(argv[0]);
      if (argc < 1) exit(-1);

      while((option = getopt(argc,argv,option_list)) != -1)
          switch(option)
          {
              case 'b':
                  brute = 1;
                  break;
              case 'd':
                  diff = atoi(optarg);
                  break;
              case 'r':
                  ret = strtoul(optarg,((void*)0),0);
                  make_string(ret);
                  tease();
                  exit(0);
                  break;
              case 's':
                  start = strtoul(optarg,((void*)0),0);
                  break;
              case '?':
                  fprintf(stderr,"[-] option \'%c\' invalid\n",optopt);
                  banner(argv[0]);
                  exit(-1);
          }

      if(brute == 1)
          bruteforce(start,diff);

      return 0;
}
