; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23369.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23369.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"bd:r:s:\00", align 1
@D_DIFF = common dso_local global i32 0, align 4
@D_START = common dso_local global i64 0, align 8
@optarg = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [25 x i8] c"[-] option '%c' invalid\0A\00", align 1
@optopt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %6, align 8
  store i32 0, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %13 = load i32, i32* @D_DIFF, align 4
  store i32 %13, i32* %10, align 4
  %14 = load i64, i64* @D_START, align 8
  store i64 %14, i64* %12, align 8
  %15 = load i8**, i8*** %5, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i64 0
  %17 = load i8*, i8** %16, align 8
  %18 = call i32 @banner(i8* %17)
  %19 = load i32, i32* %4, align 4
  %20 = icmp slt i32 %19, 1
  br i1 %20, label %21, label %23

21:                                               ; preds = %2
  %22 = call i32 @exit(i32 -1) #3
  unreachable

23:                                               ; preds = %2
  br label %24

24:                                               ; preds = %55, %23
  %25 = load i32, i32* %4, align 4
  %26 = load i8**, i8*** %5, align 8
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @getopt(i32 %25, i8** %26, i8* %27)
  store i32 %28, i32* %7, align 4
  %29 = icmp ne i32 %28, -1
  br i1 %29, label %30, label %56

30:                                               ; preds = %24
  %31 = load i32, i32* %7, align 4
  switch i32 %31, label %55 [
    i32 98, label %32
    i32 100, label %33
    i32 114, label %36
    i32 115, label %43
    i32 63, label %46
  ]

32:                                               ; preds = %30
  store i32 1, i32* %8, align 4
  br label %55

33:                                               ; preds = %30
  %34 = load i32, i32* @optarg, align 4
  %35 = call i32 @atoi(i32 %34)
  store i32 %35, i32* %10, align 4
  br label %55

36:                                               ; preds = %30
  %37 = load i32, i32* @optarg, align 4
  %38 = call i64 @strtoul(i32 %37, i32* null, i32 0)
  store i64 %38, i64* %11, align 8
  %39 = load i64, i64* %11, align 8
  %40 = call i32 @make_string(i64 %39)
  %41 = call i32 (...) @tease()
  %42 = call i32 @exit(i32 0) #3
  unreachable

43:                                               ; preds = %30
  %44 = load i32, i32* @optarg, align 4
  %45 = call i64 @strtoul(i32 %44, i32* null, i32 0)
  store i64 %45, i64* %12, align 8
  br label %55

46:                                               ; preds = %30
  %47 = load i32, i32* @stderr, align 4
  %48 = load i32, i32* @optopt, align 4
  %49 = call i32 @fprintf(i32 %47, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i32 %48)
  %50 = load i8**, i8*** %5, align 8
  %51 = getelementptr inbounds i8*, i8** %50, i64 0
  %52 = load i8*, i8** %51, align 8
  %53 = call i32 @banner(i8* %52)
  %54 = call i32 @exit(i32 -1) #3
  unreachable

55:                                               ; preds = %30, %43, %33, %32
  br label %24

56:                                               ; preds = %24
  %57 = load i32, i32* %8, align 4
  %58 = icmp eq i32 %57, 1
  br i1 %58, label %59, label %63

59:                                               ; preds = %56
  %60 = load i64, i64* %12, align 8
  %61 = load i32, i32* %10, align 4
  %62 = call i32 @bruteforce(i64 %60, i32 %61)
  br label %63

63:                                               ; preds = %59, %56
  ret i32 0
}

declare dso_local i32 @banner(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @getopt(i32, i8**, i8*) #1

declare dso_local i32 @atoi(i32) #1

declare dso_local i64 @strtoul(i32, i32*, i32) #1

declare dso_local i32 @make_string(i64) #1

declare dso_local i32 @tease(...) #1

declare dso_local i32 @fprintf(i32, i8*, i32) #1

declare dso_local i32 @bruteforce(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
